Prevents nav box from wrapping

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -104,6 +104,7 @@
 				li {
 					padding-left: 0;
 					border-left: solid _size(border-width) _palette(border);
+					white-space: nowrap;
 
 					&:first-child {
 						border-left: 0;
